--- a/prj-basics-final - route/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/prj-basics-final - route/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,14 +1,14 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="addIngrident()" #f>
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" #ingridentName>
+          <input type="text" id="name" class="form-control" >
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control" #amount>
+          <input type="number" id="amount" class="form-control" ngModel>
         </div>
       </div>
       <div class="row">
