--- a/prj-basics-final - route - form/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/prj-basics-final - route - form/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -19,7 +19,7 @@
       <ul class="dropdown-menu">
         <li><a  (click)="SendToshoppinglist()" style="cursor: pointer;">To Shopping List</a></li>
         <li><a style="cursor: pointer;" (click)="EditRecipe()">Edit Recipe</a></li>
-        <li><a style="cursor: pointer;">Delete Recipe</a></li>
+        <li><a style="cursor: pointer;" (click)="deleteRecipe()">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
