--- a/prj-basics-final - route - form/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/prj-basics-final - route - form/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,17 +1,17 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form [formGroup]="recipeForm" (ngSubmit)="submitForm()">
             <div class="row">
                 <div class="col-xs-12">
-                    <button type="submit" class="btn btn-success">Save</button>
-                    <button type="button" class="btn btn-danger">Cancel</button>
+                    <button type="submit" class="btn btn-success" [disabled]="!recipeForm.valid">Save</button>
+                    <button type="button" class="btn btn-danger" (click)="cancelForm()">Cancel</button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" id="name" class="form-control">
+                        <input type="text" id="name" class="form-control" formControlName="name"/>
                     </div>
                 </div>
             </div>
@@ -19,14 +19,14 @@
                 <div class="col-xs-12">
                     <div class="form-group">
                         <label for="imagePath">Image Url</label>
-                        <input type="text" id="imagePath" class="form-control" [(ngModel)]="imageurl">
+                        <input type="text" id="imagePath" class="form-control" formControlName="imagePath"/>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
                     <div class="form-group">
-                        <img [src]="imageurl" class="img-responsive">
+                        <img [src]="imageurl1" class="img-responsive" >
                     </div>
                 </div>
             </div>
@@ -35,12 +35,43 @@
                     <div class="form-group">
                         <label for="description">Description</label>
                         <textarea
+                        formControlName="description"
                         type="text"
                         id="description"
                         class="form-control"
                         rows="6"
                         ></textarea>
                     </div>
+                </div>
+            </div>
+            <div class="row" formArrayName="Ingredients">
+                <div class="col-xs-12">
+                    <div class="row"
+                    *ngFor="let ingCtrl of recipeForm.get('Ingredients').controls; let i = index"
+                    [formGroupName]="i"
+                    style="margin-top: 10px;"
+                    >
+                        <div class="col-xs-8">
+                                <input
+                                type="text"
+                                formControlName="name"
+                                class="form-control"
+                                >
+                        </div>
+                        <div class="col-xs-2">
+                                <input
+                                type="number"
+                                formControlName="amount"
+                                class="form-control"
+                                >
+                        </div>
+                        <div class="col-xs-2">
+                            <button class="btn btn-danger">X</button>
+                        </div>
+                    </div>
+                    <hr>
+                    <button class="btn btn-success" type="button" (click)="addIngredient()"> Add ingredient</button>
+                    
                 </div>
             </div>
         </form>
